Bug 1495404 - Postpone dbus_bus_get() call until we need it at WakeLockListener::Callback(), r=jhorak a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D7281

--HG--
extra : source : 526b8427a5bfa7b45867f865a83672b5191f7395